<resources>
    <string name="app_name">Mis Tareas</string>
    <string name="mis_tareas">Star Eas</string>
    <string name="fondo_darth_vader">fondo darth vader</string>
    <string name="antoniocs88">Antoniocs88</string>
    <string name="login">LOGIN</string>
    <string name="crea_una_cuenta">Crea una cuenta</string>
    <string name="terminado">terminado</string>
    <string name="Star_Eas">Star Eas</string>
</resources>
